<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="home.skwmium.skilltest.utils.Utils"/>

        <import type="android.view.View"/>

        <variable
            name="character"
            type="home.skwmium.skilltest.model.dto.Character"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView android:fitsSystemWindows="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@{Utils.getHouseLogoByCharacter(character)}"
                    app:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@{character.name}"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_small_8"
                android:paddingTop="@dimen/spacing_small_8">

                <!--words-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{!character.house.words.empty}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_words"/>

                    <TextView
                        style="@style/character_row_value"
                        android:text="@{character.house.words}"/>
                </TableRow>

                <!--born-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{!character.born.empty}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_born"/>

                    <TextView
                        style="@style/character_row_value"
                        android:text="@{character.born}"/>
                </TableRow>

                <!--born-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{!character.died.empty}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_died"/>

                    <TextView
                        style="@style/character_row_value"
                        android:text="@{character.died}"/>
                </TableRow>

                <!--titles-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{character.titles.size() > 0}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_titles"/>

                    <TextView
                        style="@style/character_row_value"
                        android:text="@{Utils.realmStringsToString(character.titles)}"/>
                </TableRow>

                <!--aliases-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{character.aliases.size() > 0}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_aliases"/>

                    <TextView
                        style="@style/character_row_value"
                        android:text="@{Utils.realmStringsToString(character.aliases)}"/>
                </TableRow>

                <!--fatherUrl-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{character.father != null}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_father"/>

                    <Button
                        android:id="@+id/button_character_father"
                        style="@style/character_row_button"
                        android:text="@{character.father.name}"/>
                </TableRow>

                <!--motherUrl-->
                <TableRow
                    style="@style/character_row"
                    android:visibility="@{character.mother != null}">

                    <TextView
                        style="@style/character_row_name"
                        android:text="@string/character_mother"/>

                    <Button
                        android:id="@+id/button_character_mother"
                        style="@style/character_row_button"
                        android:text="@{character.mother.name}"/>
                </TableRow>
            </TableLayout>

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>